Update files (imports)

--- a/testMovieRec2.ipynb
+++ b/testMovieRec2.ipynb
@@ -26,8 +26,9 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
+    "from collections import Counter\n",
 	"from nbdev.export import nb_export\n",
-    "from collections import Counter"
+	"from streamlit_jupyter import StreamlitPatcher, tqdm"
    ]
   },
   {
