Update files (selectbox)

--- a/testMovieRec2.ipynb
+++ b/testMovieRec2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1256,
-   "id": "6c662eed",
+   "id": "68274cac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,13 @@
     "import streamlit as st\n",
     "import pandas as pd\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from streamlit_jupyter import StreamlitPatcher, tqdm"
+    "from sklearn.feature_extraction.text import CountVectorizer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1257,
-   "id": "543cd3ce",
+   "id": "e514f8a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,14 +26,14 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "from collections import Counter\n",
-	"from nbdev.export import nb_export\n",
-	"from streamlit_jupyter import StreamlitPatcher, tqdm"
+    "from nbdev.export import nb_export\n",
+    "from streamlit_jupyter import StreamlitPatcher, tqdm"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1258,
-   "id": "cc974f33",
+   "id": "8b7bcc73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1259,
-   "id": "3332b4e0",
+   "id": "eb981a09",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 1260,
-   "id": "1af1e159",
+   "id": "54586373",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 1261,
-   "id": "b5611bb8",
+   "id": "8a5343ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 1262,
-   "id": "d3da7b9d",
+   "id": "145b863c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 1263,
-   "id": "e621684d",
+   "id": "b014a548",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 1264,
-   "id": "3ff3ba6f",
+   "id": "99dda114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 1265,
-   "id": "bc2a82e1",
+   "id": "64546354",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 1266,
-   "id": "6a871a5d",
+   "id": "bfe08dd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 1267,
-   "id": "cf5b7a5f",
+   "id": "8a88ed97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 1268,
-   "id": "f5855a1c",
+   "id": "0fa76b29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 1269,
-   "id": "9803744c",
+   "id": "934f5d8e",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 1270,
-   "id": "07a4e773",
+   "id": "7e12dfe1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 1271,
-   "id": "2878e25f",
+   "id": "f44840bb",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 1272,
-   "id": "ec880321",
+   "id": "2132d771",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 1273,
-   "id": "5ce59866",
+   "id": "7e224b50",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 1274,
-   "id": "749ecaf9",
+   "id": "5bef062b",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 1275,
-   "id": "6ba1aa6a",
+   "id": "df0f080b",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 1276,
-   "id": "e69224e4",
+   "id": "5907b78c",
    "metadata": {},
    "outputs": [
     {
@@ -1597,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 1277,
-   "id": "7f713fb3",
+   "id": "eb8b6c19",
    "metadata": {},
    "outputs": [
     {
@@ -1622,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 1278,
-   "id": "828646f0",
+   "id": "785c49c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1634,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 1279,
-   "id": "81501433",
+   "id": "add4ebe9",
    "metadata": {},
    "outputs": [
     {
@@ -1660,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 1280,
-   "id": "f23c6501",
+   "id": "9edcc0ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1672,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 1281,
-   "id": "5d9c6aa3",
+   "id": "bf0128ae",
    "metadata": {},
    "outputs": [
     {
@@ -1693,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 1282,
-   "id": "fb4848e5",
+   "id": "4e34839d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 1283,
-   "id": "aa1fbdc8",
+   "id": "55ab5c38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1730,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 1284,
-   "id": "7d2b2838",
+   "id": "de23e74a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1742,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 1285,
-   "id": "7366b2f4",
+   "id": "4db2c0d8",
    "metadata": {},
    "outputs": [
     {
@@ -1997,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": 1286,
-   "id": "e8c8c93b",
+   "id": "93450691",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2010,7 +2009,7 @@
   {
    "cell_type": "code",
    "execution_count": 1287,
-   "id": "1150f71a",
+   "id": "72377cb3",
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": 1288,
-   "id": "dd3159e7",
+   "id": "23bfb1db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2043,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": 1292,
-   "id": "a89449aa",
+   "id": "eaaa50c8",
    "metadata": {},
    "outputs": [
     {
@@ -2076,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 1293,
-   "id": "0975b3f8",
+   "id": "868e9f13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2088,7 +2087,7 @@
   {
    "cell_type": "code",
    "execution_count": 1294,
-   "id": "5dd9332f",
+   "id": "144c4099",
    "metadata": {},
    "outputs": [
     {
@@ -2121,7 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": 1295,
-   "id": "4fe8a0df",
+   "id": "77c28eea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2142,7 +2141,7 @@
   {
    "cell_type": "code",
    "execution_count": 1296,
-   "id": "7fb18cb6",
+   "id": "084ed533",
    "metadata": {},
    "outputs": [
     {
@@ -2171,8 +2170,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "71f3a380",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# |exporti\n",
+    "\n",
+    "selected_movie_name = st.selectbox('Please select a movie you enjoy:', movies['clean_title'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1297,
-   "id": "2bf38e33",
+   "id": "53776b98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2187,17 +2198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4dc2705a",
+   "execution_count": 1300,
+   "id": "f6cb2984",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_export(\"movie-test.ipynb\", lib_path=\"./\", name=\"testMovieSys2\")"
+    "nb_export(\"movie-test.ipynb\", lib_path=\"./\", name=\"testMovieRec2\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7e3fafd4",
+   "id": "ad9033c1",
    "metadata": {},
    "source": [
     "Please click the button to open the web app: [![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://sunlongan-testmovierec-testmovierec-iqjd0v.streamlit.app/)"
