Update files (return recommended_movies)

--- a/testMovieRec2.ipynb
+++ b/testMovieRec2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1256,
-   "id": "68274cac",
+   "id": "3f5297cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1257,
-   "id": "e514f8a2",
+   "id": "27f83716",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1258,
-   "id": "8b7bcc73",
+   "id": "032b8748",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1259,
-   "id": "eb981a09",
+   "id": "eccb7d0a",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 1260,
-   "id": "54586373",
+   "id": "0ed4269b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 1261,
-   "id": "8a5343ef",
+   "id": "365eed27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 1262,
-   "id": "145b863c",
+   "id": "50ae8e05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 1263,
-   "id": "b014a548",
+   "id": "fc324508",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 1264,
-   "id": "99dda114",
+   "id": "aafeed9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 1265,
-   "id": "64546354",
+   "id": "275a595a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 1266,
-   "id": "bfe08dd8",
+   "id": "f89b6ea9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 1267,
-   "id": "8a88ed97",
+   "id": "6ead8da9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 1268,
-   "id": "0fa76b29",
+   "id": "486afb91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 1269,
-   "id": "934f5d8e",
+   "id": "915449ac",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 1270,
-   "id": "7e12dfe1",
+   "id": "aa7bc8ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 1271,
-   "id": "f44840bb",
+   "id": "be17673c",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 1272,
-   "id": "2132d771",
+   "id": "20e0f425",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 1273,
-   "id": "7e224b50",
+   "id": "38b224cd",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 1274,
-   "id": "5bef062b",
+   "id": "e8e2ac84",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 1275,
-   "id": "df0f080b",
+   "id": "208ab10d",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 1276,
-   "id": "5907b78c",
+   "id": "6d919522",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 1277,
-   "id": "eb8b6c19",
+   "id": "f9fee29c",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 1278,
-   "id": "785c49c2",
+   "id": "4f09cb2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 1279,
-   "id": "add4ebe9",
+   "id": "46092ad1",
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 1280,
-   "id": "9edcc0ad",
+   "id": "4e0ac3bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 1281,
-   "id": "bf0128ae",
+   "id": "0a2b42bb",
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 1282,
-   "id": "4e34839d",
+   "id": "a5da609b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 1283,
-   "id": "55ab5c38",
+   "id": "9a96e3bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 1284,
-   "id": "de23e74a",
+   "id": "48dd8cc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 1285,
-   "id": "4db2c0d8",
+   "id": "ecdc163a",
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": 1286,
-   "id": "93450691",
+   "id": "0f98ccea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2009,7 +2009,7 @@
   {
    "cell_type": "code",
    "execution_count": 1287,
-   "id": "72377cb3",
+   "id": "75b6387a",
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": 1288,
-   "id": "23bfb1db",
+   "id": "c3724771",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2042,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": 1292,
-   "id": "eaaa50c8",
+   "id": "c4d8c871",
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 1293,
-   "id": "868e9f13",
+   "id": "e0f40bc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2087,7 +2087,7 @@
   {
    "cell_type": "code",
    "execution_count": 1294,
-   "id": "144c4099",
+   "id": "5ced7d3e",
    "metadata": {},
    "outputs": [
     {
@@ -2120,7 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": 1295,
-   "id": "77c28eea",
+   "id": "1704e14d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2135,13 +2135,13 @@
     "    for i in movies_list:\n",
     "        recommended_movies.append([movies.iloc[i[0]].clean_title])\n",
     "\n",
-    "    return recommended_movies, movies_list"
+    "    return recommended_movies"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1296,
-   "id": "084ed533",
+   "id": "8cbb637d",
    "metadata": {},
    "outputs": [
     {
@@ -2171,7 +2171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71f3a380",
+   "id": "130f5411",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2183,7 +2183,7 @@
   {
    "cell_type": "code",
    "execution_count": 1297,
-   "id": "53776b98",
+   "id": "b4ac5d5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2199,7 +2199,7 @@
   {
    "cell_type": "code",
    "execution_count": 1300,
-   "id": "f6cb2984",
+   "id": "82d51525",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2208,7 +2208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad9033c1",
+   "id": "3cdbe5fb",
    "metadata": {},
    "source": [
     "Please click the button to open the web app: [![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://sunlongan-testmovierec-testmovierec-iqjd0v.streamlit.app/)"
