Update files (print movie recommendations)

--- a/testMovieRec2.ipynb
+++ b/testMovieRec2.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1256,
-   "id": "3f5297cf",
+   "execution_count": 1305,
+   "id": "16dcc0b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1257,
-   "id": "27f83716",
+   "execution_count": 1306,
+   "id": "66523c01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1258,
-   "id": "032b8748",
+   "execution_count": 1307,
+   "id": "aacbe944",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1259,
-   "id": "eccb7d0a",
+   "execution_count": 1308,
+   "id": "25a7eedc",
    "metadata": {},
    "outputs": [
     {
@@ -68,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1260,
-   "id": "0ed4269b",
+   "execution_count": 1309,
+   "id": "b3fca7f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1261,
-   "id": "365eed27",
+   "execution_count": 1310,
+   "id": "b67e053b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1262,
-   "id": "50ae8e05",
+   "execution_count": 1311,
+   "id": "8606bb9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,8 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1263,
-   "id": "fc324508",
+   "execution_count": 1312,
+   "id": "379a25b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,8 +122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1264,
-   "id": "aafeed9c",
+   "execution_count": 1313,
+   "id": "c476868b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1265,
-   "id": "275a595a",
+   "execution_count": 1314,
+   "id": "d2af3422",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,8 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1266,
-   "id": "f89b6ea9",
+   "execution_count": 1315,
+   "id": "ebdc255e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,8 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1267,
-   "id": "6ead8da9",
+   "execution_count": 1316,
+   "id": "56b05037",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,8 +176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1268,
-   "id": "486afb91",
+   "execution_count": 1317,
+   "id": "9dc96b03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,8 +188,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1269,
-   "id": "915449ac",
+   "execution_count": 1318,
+   "id": "b646c46c",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "True"
       ]
      },
-     "execution_count": 1269,
+     "execution_count": 1318,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,8 +209,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1270,
-   "id": "aa7bc8ac",
+   "execution_count": 1319,
+   "id": "88f5320f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,8 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1271,
-   "id": "be17673c",
+   "execution_count": 1320,
+   "id": "7f627359",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "4       The Lord of the Rings: The Two Towers (2002)  "
       ]
      },
-     "execution_count": 1271,
+     "execution_count": 1320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,8 +345,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1272,
-   "id": "20e0f425",
+   "execution_count": 1321,
+   "id": "0c076c61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,8 +362,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1273,
-   "id": "38b224cd",
+   "execution_count": 1322,
+   "id": "06435ce5",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
        "4       The Lord of the Rings: The Two Towers (2002)  "
       ]
      },
-     "execution_count": 1273,
+     "execution_count": 1322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,8 +486,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1274,
-   "id": "e8e2ac84",
+   "execution_count": 1323,
+   "id": "88d2d91c",
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        " ('reality-tv', 1)]"
       ]
      },
-     "execution_count": 1274,
+     "execution_count": 1323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,8 +537,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1275,
-   "id": "208ab10d",
+   "execution_count": 1324,
+   "id": "8c4206bd",
    "metadata": {},
    "outputs": [
     {
@@ -565,8 +565,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1276,
-   "id": "6d919522",
+   "execution_count": 1325,
+   "id": "4fd54b4a",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
        " ...]"
       ]
      },
-     "execution_count": 1276,
+     "execution_count": 1325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,8 +1595,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1277,
-   "id": "f9fee29c",
+   "execution_count": 1326,
+   "id": "86528263",
    "metadata": {},
    "outputs": [
     {
@@ -1620,8 +1620,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1278,
-   "id": "4f09cb2c",
+   "execution_count": 1327,
+   "id": "a7107932",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1632,8 +1632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1279,
-   "id": "46092ad1",
+   "execution_count": 1328,
+   "id": "d8d50b8a",
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1642,7 @@
        "2000"
       ]
      },
-     "execution_count": 1279,
+     "execution_count": 1328,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,8 +1658,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1280,
-   "id": "4e0ac3bb",
+   "execution_count": 1329,
+   "id": "70da3a07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1670,8 +1670,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1281,
-   "id": "0a2b42bb",
+   "execution_count": 1330,
+   "id": "90cb5235",
    "metadata": {},
    "outputs": [
     {
@@ -1691,8 +1691,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1282,
-   "id": "a5da609b",
+   "execution_count": 1331,
+   "id": "f8415604",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1707,8 +1707,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1283,
-   "id": "9a96e3bc",
+   "execution_count": 1332,
+   "id": "880c38a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1728,8 +1728,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1284,
-   "id": "48dd8cc4",
+   "execution_count": 1333,
+   "id": "17b928fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1740,8 +1740,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1285,
-   "id": "ecdc163a",
+   "execution_count": 1334,
+   "id": "eed6d058",
    "metadata": {},
    "outputs": [
     {
@@ -1984,7 +1984,7 @@
        "[5551 rows x 8 columns]"
       ]
      },
-     "execution_count": 1285,
+     "execution_count": 1334,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1995,8 +1995,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1286,
-   "id": "0f98ccea",
+   "execution_count": 1335,
+   "id": "3370cf24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2008,8 +2008,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1287,
-   "id": "75b6387a",
+   "execution_count": 1336,
+   "id": "96de8899",
    "metadata": {},
    "outputs": [
     {
@@ -2018,7 +2018,7 @@
        "(5551, 11040)"
       ]
      },
-     "execution_count": 1287,
+     "execution_count": 1336,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2029,8 +2029,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1288,
-   "id": "c3724771",
+   "execution_count": 1337,
+   "id": "acbdfd33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2041,8 +2041,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1292,
-   "id": "c4d8c871",
+   "execution_count": 1338,
+   "id": "f9df7547",
    "metadata": {},
    "outputs": [
     {
@@ -2063,7 +2063,7 @@
        "        1.        ]])"
       ]
      },
-     "execution_count": 1292,
+     "execution_count": 1338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2074,53 +2074,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1293,
-   "id": "e0f40bc2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# |exporti\n",
-    "\n",
-    "indices = pd.Series(movies.index, index=movies['clean_title'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1294,
-   "id": "5ced7d3e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "clean_title\n",
-       "Kantara (2022)                                             0\n",
-       "The Dark Knight (2008)                                     1\n",
-       "The Lord of the Rings: The Return of the King (2003)       2\n",
-       "Inception (2010)                                           3\n",
-       "The Lord of the Rings: The Two Towers (2002)               4\n",
-       "                                                        ... \n",
-       "Disaster Movie (2008)                                   5546\n",
-       "The Hottie & the Nottie (2008)                          5547\n",
-       "From Justin to Kelly (2003)                             5548\n",
-       "Superbabies: Baby Geniuses 2 (2004)                     5549\n",
-       "Cumali Ceber: Allah Seni Alsin (2017)                   5550\n",
-       "Length: 5551, dtype: int64"
-      ]
-     },
-     "execution_count": 1294,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1295,
-   "id": "1704e14d",
+   "execution_count": 1344,
+   "id": "8901c317",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2131,49 +2086,53 @@
     "    distances = cs[movie_indices]\n",
     "    movies_list = sorted(list(enumerate(distances)), reverse=True, key=lambda x: x[1])[1:6]\n",
     "\n",
-    "    recommended_movies = []\n",
-    "    for i in movies_list:\n",
-    "        recommended_movies.append([movies.iloc[i[0]].clean_title])\n",
-    "\n",
-    "    return recommended_movies"
+    "    for i in movies_list: \n",
+    "        print(movies.iloc[i[0]].clean_title)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1296,
-   "id": "8cbb637d",
+   "execution_count": 1346,
+   "id": "687de425",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avengers: Age of Ultron (2015)\n",
+      "Captain America: Civil War (2016)\n",
+      "Avengers: Infinity War (2018)\n",
+      "Captain America: The Winter Soldier (2014)\n",
+      "Spider-Man: Homecoming (2017)\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend(\"The Avengers (2012)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1341,
+   "id": "b13468ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "707b25dd91b6413ca4314d271550fd28",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "([['Birds of Prey and the Fantabulous Emancipation of One Harley Quinn (2020)'],\n",
-       "  ['Guardians of the Galaxy (2014)'],\n",
-       "  ['Minnal Murali (2021)'],\n",
-       "  ['Guardians of the Galaxy Vol. 2 (2017)'],\n",
-       "  ['Free Guy (2021)']],\n",
-       " [(1196, 0.5555555555555556),\n",
-       "  (80, 0.4444444444444444),\n",
-       "  (102, 0.4444444444444444),\n",
-       "  (195, 0.4444444444444444),\n",
-       "  (415, 0.4444444444444444)])"
+       "Dropdown(description='Please select a movie you enjoy:', options=('Kantara (2022)', 'The Dark Knight (2008)', …"
       ]
      },
-     "execution_count": 1296,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
-   "source": [
-    "recommend(\"The Suicide Squad (2021)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "130f5411",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# |exporti\n",
     "\n",
@@ -2183,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": 1297,
-   "id": "b4ac5d5e",
+   "id": "d72fa844",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2198,17 +2157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1300,
-   "id": "82d51525",
+   "execution_count": 1347,
+   "id": "6beba9df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_export(\"movie-test.ipynb\", lib_path=\"./\", name=\"testMovieRec2\")"
+    "nb_export(\"testMovieRec2.ipynb\", lib_path=\"./\", name=\"testMovieRec2\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3cdbe5fb",
+   "id": "e11473b4",
    "metadata": {},
    "source": [
     "Please click the button to open the web app: [![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://sunlongan-testmovierec-testmovierec-iqjd0v.streamlit.app/)"
