--- a/testMovieRec2.ipynb
+++ b/testMovieRec2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1305,
-   "id": "16dcc0b9",
+   "id": "47074060",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1306,
-   "id": "66523c01",
+   "id": "be54f7ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1307,
-   "id": "aacbe944",
+   "id": "7ee36576",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1308,
-   "id": "25a7eedc",
+   "id": "e02efe68",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 1309,
-   "id": "b3fca7f9",
+   "id": "9b3daaf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 1310,
-   "id": "b67e053b",
+   "id": "d0f0072a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 1311,
-   "id": "8606bb9f",
+   "id": "8996ff9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 1312,
-   "id": "379a25b5",
+   "id": "52ed6924",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 1313,
-   "id": "c476868b",
+   "id": "a9320175",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 1314,
-   "id": "d2af3422",
+   "id": "851cd27b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 1315,
-   "id": "ebdc255e",
+   "id": "2f0f374c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 1316,
-   "id": "56b05037",
+   "id": "ed9843d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 1317,
-   "id": "9dc96b03",
+   "id": "f09f894a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 1318,
-   "id": "b646c46c",
+   "id": "26bd481e",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 1319,
-   "id": "88f5320f",
+   "id": "e1150fa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 1320,
-   "id": "7f627359",
+   "id": "05697981",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 1321,
-   "id": "0c076c61",
+   "id": "ea57808a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 1322,
-   "id": "06435ce5",
+   "id": "3213e1ff",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 1323,
-   "id": "88d2d91c",
+   "id": "c2a75a9e",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 1324,
-   "id": "8c4206bd",
+   "id": "8bb817cb",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 1325,
-   "id": "4fd54b4a",
+   "id": "9da1e936",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 1326,
-   "id": "86528263",
+   "id": "586d8b31",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 1327,
-   "id": "a7107932",
+   "id": "250d3c31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 1328,
-   "id": "d8d50b8a",
+   "id": "2ef29cbc",
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 1329,
-   "id": "70da3a07",
+   "id": "16c249af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 1330,
-   "id": "90cb5235",
+   "id": "874ce158",
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 1331,
-   "id": "f8415604",
+   "id": "8b280257",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 1332,
-   "id": "880c38a7",
+   "id": "e4929cc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 1333,
-   "id": "17b928fb",
+   "id": "546a0997",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 1334,
-   "id": "eed6d058",
+   "id": "a929be18",
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": 1335,
-   "id": "3370cf24",
+   "id": "7f2f2a89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2009,7 +2009,7 @@
   {
    "cell_type": "code",
    "execution_count": 1336,
-   "id": "96de8899",
+   "id": "63ec6424",
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": 1337,
-   "id": "acbdfd33",
+   "id": "6453954e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2042,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": 1338,
-   "id": "f9df7547",
+   "id": "279270f0",
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 1344,
-   "id": "8901c317",
+   "id": "4025cd4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2086,14 +2086,17 @@
     "    distances = cs[movie_indices]\n",
     "    movies_list = sorted(list(enumerate(distances)), reverse=True, key=lambda x: x[1])[1:6]\n",
     "\n",
-    "    for i in movies_list: \n",
-    "        print(movies.iloc[i[0]].clean_title)"
+    "    recommended_movies = []\n",
+    "    for i in movies_list:\n",
+    "        recommended_movies.append([movies.iloc[i[0]].clean_title])\n",
+    "\n",
+    "    return recommended_movies"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1346,
-   "id": "687de425",
+   "id": "1f4e260d",
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2118,7 @@
   {
    "cell_type": "code",
    "execution_count": 1341,
-   "id": "b13468ce",
+   "id": "69f50618",
    "metadata": {},
    "outputs": [
     {
@@ -2142,7 +2145,7 @@
   {
    "cell_type": "code",
    "execution_count": 1297,
-   "id": "d72fa844",
+   "id": "f557bf9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2157,8 +2160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1347,
-   "id": "6beba9df",
+   "execution_count": 1348,
+   "id": "d938e74b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,7 +2170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e11473b4",
+   "id": "b4a24cdc",
    "metadata": {},
    "source": [
     "Please click the button to open the web app: [![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://sunlongan-testmovierec-testmovierec-iqjd0v.streamlit.app/)"
