--- a/testMovieRec2.ipynb
+++ b/testMovieRec2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1305,
-   "id": "47074060",
+   "id": "f2e4d470",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1306,
-   "id": "be54f7ca",
+   "id": "6eb3179f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1307,
-   "id": "7ee36576",
+   "id": "0a2adf59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1308,
-   "id": "e02efe68",
+   "id": "c060f849",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 1309,
-   "id": "9b3daaf1",
+   "id": "17e0edbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 1310,
-   "id": "d0f0072a",
+   "id": "d4c78044",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 1311,
-   "id": "8996ff9b",
+   "id": "09b473a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 1312,
-   "id": "52ed6924",
+   "id": "76b757ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 1313,
-   "id": "a9320175",
+   "id": "5304b3ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 1314,
-   "id": "851cd27b",
+   "id": "9dbed69c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 1315,
-   "id": "2f0f374c",
+   "id": "c714e370",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 1316,
-   "id": "ed9843d8",
+   "id": "73d3e37a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 1317,
-   "id": "f09f894a",
+   "id": "15c52045",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 1318,
-   "id": "26bd481e",
+   "id": "e6f6afcc",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 1319,
-   "id": "e1150fa9",
+   "id": "ba8a12c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 1320,
-   "id": "05697981",
+   "id": "9874610c",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 1321,
-   "id": "ea57808a",
+   "id": "cc4319c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 1322,
-   "id": "3213e1ff",
+   "id": "98a97104",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 1323,
-   "id": "c2a75a9e",
+   "id": "d07585db",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 1324,
-   "id": "8bb817cb",
+   "id": "4aae601a",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 1325,
-   "id": "9da1e936",
+   "id": "51d66103",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 1326,
-   "id": "586d8b31",
+   "id": "68d8d4ed",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 1327,
-   "id": "250d3c31",
+   "id": "77690d9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 1328,
-   "id": "2ef29cbc",
+   "id": "7f0ac6a5",
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 1329,
-   "id": "16c249af",
+   "id": "4c36d17e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 1330,
-   "id": "874ce158",
+   "id": "e1936dce",
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 1331,
-   "id": "8b280257",
+   "id": "ebbb79eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 1332,
-   "id": "e4929cc3",
+   "id": "cf08a055",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 1333,
-   "id": "546a0997",
+   "id": "e091f09a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 1334,
-   "id": "a929be18",
+   "id": "e866061d",
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": 1335,
-   "id": "7f2f2a89",
+   "id": "6a12ebe7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2009,7 +2009,7 @@
   {
    "cell_type": "code",
    "execution_count": 1336,
-   "id": "63ec6424",
+   "id": "7b32ca12",
    "metadata": {},
    "outputs": [
     {
@@ -2029,8 +2029,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1337,
-   "id": "6453954e",
+   "execution_count": 1351,
+   "id": "97a9ea20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2041,8 +2041,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1338,
-   "id": "279270f0",
+   "execution_count": 1352,
+   "id": "e1f34a5d",
    "metadata": {},
    "outputs": [
     {
@@ -2063,7 +2063,7 @@
        "        1.        ]])"
       ]
      },
-     "execution_count": 1338,
+     "execution_count": 1352,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2074,8 +2074,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1344,
-   "id": "4025cd4c",
+   "execution_count": 1353,
+   "id": "a50b0583",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2095,20 +2095,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1346,
-   "id": "1f4e260d",
+   "execution_count": 1354,
+   "id": "6a3a2d70",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Avengers: Age of Ultron (2015)\n",
-      "Captain America: Civil War (2016)\n",
-      "Avengers: Infinity War (2018)\n",
-      "Captain America: The Winter Soldier (2014)\n",
-      "Spider-Man: Homecoming (2017)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[['Avengers: Age of Ultron (2015)'],\n",
+       " ['Captain America: Civil War (2016)'],\n",
+       " ['Avengers: Infinity War (2018)'],\n",
+       " ['Captain America: The Winter Soldier (2014)'],\n",
+       " ['Spider-Man: Homecoming (2017)']]"
+      ]
+     },
+     "execution_count": 1354,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2117,14 +2120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1341,
-   "id": "69f50618",
+   "execution_count": 1350,
+   "id": "3f894b28",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "707b25dd91b6413ca4314d271550fd28",
+       "model_id": "7309c4e1784245f5a4f717e9b1220e07",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2139,13 +2142,13 @@
    "source": [
     "# |exporti\n",
     "\n",
-    "selected_movie_name = st.selectbox('Please select a movie you enjoy:', movies['clean_title'])"
+    "selected_movie_name = st.selectbox('Please select a movie you enjoy:', movies['clean_title'].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1297,
-   "id": "f557bf9c",
+   "execution_count": 1355,
+   "id": "8009ead4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2160,8 +2163,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1348,
-   "id": "d938e74b",
+   "execution_count": 1349,
+   "id": "02989b89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2170,7 +2173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4a24cdc",
+   "id": "5b64eb72",
    "metadata": {},
    "source": [
     "Please click the button to open the web app: [![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://sunlongan-testmovierec-testmovierec-iqjd0v.streamlit.app/)"
