--- a/testMovieRec2.ipynb
+++ b/testMovieRec2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1305,
-   "id": "f2e4d470",
+   "id": "ae938f10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1306,
-   "id": "6eb3179f",
+   "id": "3243fb75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1307,
-   "id": "0a2adf59",
+   "id": "ecfaca70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1308,
-   "id": "c060f849",
+   "id": "ec2b1d76",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 1309,
-   "id": "17e0edbc",
+   "id": "e695e2dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 1310,
-   "id": "d4c78044",
+   "id": "b6b4c8a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 1311,
-   "id": "09b473a3",
+   "id": "9958bbc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 1312,
-   "id": "76b757ce",
+   "id": "c15e1abd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 1313,
-   "id": "5304b3ad",
+   "id": "28ddf0ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 1314,
-   "id": "9dbed69c",
+   "id": "58541d30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 1315,
-   "id": "c714e370",
+   "id": "ec7bb6a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 1316,
-   "id": "73d3e37a",
+   "id": "b46dc9d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 1317,
-   "id": "15c52045",
+   "id": "e32aa5c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 1318,
-   "id": "e6f6afcc",
+   "id": "972e38d9",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 1319,
-   "id": "ba8a12c2",
+   "id": "b9e9a659",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 1320,
-   "id": "9874610c",
+   "id": "76b07538",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 1321,
-   "id": "cc4319c6",
+   "id": "95a4ca3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 1322,
-   "id": "98a97104",
+   "id": "2d87bc5e",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 1323,
-   "id": "d07585db",
+   "id": "7addf37c",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 1324,
-   "id": "4aae601a",
+   "id": "5b0af91e",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 1325,
-   "id": "51d66103",
+   "id": "53163afe",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 1326,
-   "id": "68d8d4ed",
+   "id": "7b8d2e6a",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 1327,
-   "id": "77690d9a",
+   "id": "b8c83667",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 1328,
-   "id": "7f0ac6a5",
+   "id": "7501b2b6",
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 1329,
-   "id": "4c36d17e",
+   "id": "18e40069",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 1330,
-   "id": "e1936dce",
+   "id": "4a8fcd65",
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 1331,
-   "id": "ebbb79eb",
+   "id": "eeacbc3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 1332,
-   "id": "cf08a055",
+   "id": "0d67e818",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 1333,
-   "id": "e091f09a",
+   "id": "9c60f6cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 1334,
-   "id": "e866061d",
+   "id": "c96ecfec",
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": 1335,
-   "id": "6a12ebe7",
+   "id": "1897623d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2009,7 +2009,7 @@
   {
    "cell_type": "code",
    "execution_count": 1336,
-   "id": "7b32ca12",
+   "id": "194f4464",
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": 1351,
-   "id": "97a9ea20",
+   "id": "920e7209",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2042,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": 1352,
-   "id": "e1f34a5d",
+   "id": "c47bf8e9",
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 1353,
-   "id": "a50b0583",
+   "id": "03c556de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2096,7 +2096,7 @@
   {
    "cell_type": "code",
    "execution_count": 1354,
-   "id": "6a3a2d70",
+   "id": "e0995d09",
    "metadata": {},
    "outputs": [
     {
@@ -2121,7 +2121,7 @@
   {
    "cell_type": "code",
    "execution_count": 1350,
-   "id": "3f894b28",
+   "id": "5cc03c26",
    "metadata": {},
    "outputs": [
     {
@@ -2147,8 +2147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1355,
-   "id": "8009ead4",
+   "execution_count": 1357,
+   "id": "783d1ff1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2158,13 +2158,13 @@
     "    recommendations = recommend(selected_movie_name)\n",
     "    st.write(\"Based on your selection, we recommend the following movies:\")\n",
     "    for j in recommendations:\n",
-    "        st.write(j)"
+    "        st.write(j[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1349,
-   "id": "02989b89",
+   "execution_count": 1356,
+   "id": "c5cc7f4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2173,7 +2173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b64eb72",
+   "id": "6fdb9dee",
    "metadata": {},
    "source": [
     "Please click the button to open the web app: [![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://sunlongan-testmovierec-testmovierec-iqjd0v.streamlit.app/)"
