--- a/testMovieRec2.ipynb
+++ b/testMovieRec2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1305,
-   "id": "ae938f10",
+   "id": "b19b5edc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1306,
-   "id": "3243fb75",
+   "id": "4d22df5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1307,
-   "id": "ecfaca70",
+   "id": "e9663c45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1308,
-   "id": "ec2b1d76",
+   "id": "7db370d5",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 1309,
-   "id": "e695e2dd",
+   "id": "2463c22d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 1310,
-   "id": "b6b4c8a9",
+   "id": "7fdc76f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 1311,
-   "id": "9958bbc8",
+   "id": "bb1b88a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 1312,
-   "id": "c15e1abd",
+   "id": "6e176acc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 1313,
-   "id": "28ddf0ed",
+   "id": "03a174b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 1314,
-   "id": "58541d30",
+   "id": "2a6620d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 1315,
-   "id": "ec7bb6a3",
+   "id": "3013aa78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 1316,
-   "id": "b46dc9d7",
+   "id": "7944e193",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 1317,
-   "id": "e32aa5c0",
+   "id": "3c88392c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 1318,
-   "id": "972e38d9",
+   "id": "00f1edb1",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 1319,
-   "id": "b9e9a659",
+   "id": "7faa8f4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 1320,
-   "id": "76b07538",
+   "id": "2e480d56",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 1321,
-   "id": "95a4ca3b",
+   "id": "a438d658",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 1322,
-   "id": "2d87bc5e",
+   "id": "308ab2f4",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 1323,
-   "id": "7addf37c",
+   "id": "9ffd5d89",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 1324,
-   "id": "5b0af91e",
+   "id": "d29697af",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 1325,
-   "id": "53163afe",
+   "id": "b1a92e98",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 1326,
-   "id": "7b8d2e6a",
+   "id": "fd6fae99",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 1327,
-   "id": "b8c83667",
+   "id": "4cb7f77d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 1328,
-   "id": "7501b2b6",
+   "id": "10a88397",
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 1329,
-   "id": "18e40069",
+   "id": "6d166968",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 1330,
-   "id": "4a8fcd65",
+   "id": "0ea75a1b",
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 1331,
-   "id": "eeacbc3c",
+   "id": "eec69062",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 1332,
-   "id": "0d67e818",
+   "id": "3d542f8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 1333,
-   "id": "9c60f6cf",
+   "id": "48a39427",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 1334,
-   "id": "c96ecfec",
+   "id": "20e58bee",
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": 1335,
-   "id": "1897623d",
+   "id": "ce24e97c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2009,7 +2009,7 @@
   {
    "cell_type": "code",
    "execution_count": 1336,
-   "id": "194f4464",
+   "id": "7df1d23b",
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": 1351,
-   "id": "920e7209",
+   "id": "f2b47215",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2042,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": 1352,
-   "id": "c47bf8e9",
+   "id": "657f35de",
    "metadata": {},
    "outputs": [
     {
@@ -2074,8 +2074,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1353,
-   "id": "03c556de",
+   "execution_count": 1360,
+   "id": "17f3e15a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2088,28 +2088,28 @@
     "\n",
     "    recommended_movies = []\n",
     "    for i in movies_list:\n",
-    "        recommended_movies.append([movies.iloc[i[0]].clean_title])\n",
+    "        recommended_movies.append(movies.iloc[i[0]].clean_title)\n",
     "\n",
     "    return recommended_movies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1354,
-   "id": "e0995d09",
+   "execution_count": 1361,
+   "id": "e058439c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['Avengers: Age of Ultron (2015)'],\n",
-       " ['Captain America: Civil War (2016)'],\n",
-       " ['Avengers: Infinity War (2018)'],\n",
-       " ['Captain America: The Winter Soldier (2014)'],\n",
-       " ['Spider-Man: Homecoming (2017)']]"
+       "['Avengers: Age of Ultron (2015)',\n",
+       " 'Captain America: Civil War (2016)',\n",
+       " 'Avengers: Infinity War (2018)',\n",
+       " 'Captain America: The Winter Soldier (2014)',\n",
+       " 'Spider-Man: Homecoming (2017)']"
       ]
      },
-     "execution_count": 1354,
+     "execution_count": 1361,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2120,14 +2120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1350,
-   "id": "5cc03c26",
+   "execution_count": 1362,
+   "id": "c6da4f85",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7309c4e1784245f5a4f717e9b1220e07",
+       "model_id": "4ca3f84fb7b9458c8b951a468e012921",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2148,7 +2148,7 @@
   {
    "cell_type": "code",
    "execution_count": 1357,
-   "id": "783d1ff1",
+   "id": "8999c75f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2158,13 +2158,13 @@
     "    recommendations = recommend(selected_movie_name)\n",
     "    st.write(\"Based on your selection, we recommend the following movies:\")\n",
     "    for j in recommendations:\n",
-    "        st.write(j[1])"
+    "        st.write(j[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1356,
-   "id": "c5cc7f4a",
+   "execution_count": 1358,
+   "id": "3072a78f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2173,7 +2173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fdb9dee",
+   "id": "94b495eb",
    "metadata": {},
    "source": [
     "Please click the button to open the web app: [![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://sunlongan-testmovierec-testmovierec-iqjd0v.streamlit.app/)"
