Update files (tfidf to py)

--- a/testMovieRec2.ipynb
+++ b/testMovieRec2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1415,
-   "id": "01804b1d",
+   "id": "f0af7186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1416,
-   "id": "42fae23b",
+   "id": "f1781818",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1417,
-   "id": "28c98260",
+   "id": "1b6ea7b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1418,
-   "id": "1fd7201e",
+   "id": "ed7bfac9",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 1419,
-   "id": "e6c96563",
+   "id": "67fa3ff8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 1420,
-   "id": "2507fa25",
+   "id": "7119c0ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 1421,
-   "id": "d0e8542d",
+   "id": "9941b06c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 1422,
-   "id": "498bfed6",
+   "id": "de673685",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 1423,
-   "id": "ce30c14c",
+   "id": "d343f798",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 1424,
-   "id": "1034061a",
+   "id": "5f88bcc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 1425,
-   "id": "e17725b3",
+   "id": "d1a41099",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 1426,
-   "id": "f9bf403e",
+   "id": "70da7547",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 1427,
-   "id": "aa54a328",
+   "id": "e653caee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 1428,
-   "id": "aa45a8b8",
+   "id": "7f283c95",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 1429,
-   "id": "2df08603",
+   "id": "d6c738ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 1430,
-   "id": "9d3172e4",
+   "id": "0daf25a1",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 1431,
-   "id": "c630917f",
+   "id": "797da296",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 1432,
-   "id": "c3b14eab",
+   "id": "46d4683f",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 1433,
-   "id": "385065fd",
+   "id": "7d785427",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 1434,
-   "id": "17edc2b4",
+   "id": "048fb7e7",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 1435,
-   "id": "2a762725",
+   "id": "10511dab",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 1436,
-   "id": "70f5a1d4",
+   "id": "0b4004f5",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 1437,
-   "id": "2f626ccd",
+   "id": "1b120051",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 1438,
-   "id": "57e61be7",
+   "id": "e4f34384",
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 1439,
-   "id": "4c2e165f",
+   "id": "35628a38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 1440,
-   "id": "8a6b0046",
+   "id": "76781863",
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 1441,
-   "id": "f0a9435e",
+   "id": "d32ab483",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 1442,
-   "id": "0f1b2560",
+   "id": "1bc4d005",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 1443,
-   "id": "5f88e8ef",
+   "id": "5d6ba40c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 1444,
-   "id": "da023f8b",
+   "id": "1b58c489",
    "metadata": {},
    "outputs": [
     {
@@ -1996,10 +1996,12 @@
   {
    "cell_type": "code",
    "execution_count": 1445,
-   "id": "54ac1a77",
+   "id": "0724da6f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# |exporti\n",
+    "\n",
     "tfvec = TfidfVectorizer()\n",
     "tfvec_matrix = tfvec.fit_transform(movies['combined_features'])"
    ]
@@ -2007,7 +2009,7 @@
   {
    "cell_type": "code",
    "execution_count": 1446,
-   "id": "8b33e1c5",
+   "id": "9479b7de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,7 +2021,7 @@
   {
    "cell_type": "code",
    "execution_count": 1447,
-   "id": "5c83bbbb",
+   "id": "72802ed1",
    "metadata": {},
    "outputs": [
     {
@@ -2052,7 +2054,7 @@
   {
    "cell_type": "code",
    "execution_count": 1448,
-   "id": "f4375632",
+   "id": "e55f06ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2073,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 1453,
-   "id": "badc0941",
+   "id": "4ecb423d",
    "metadata": {},
    "outputs": [
     {
@@ -2103,7 +2105,7 @@
   {
    "cell_type": "code",
    "execution_count": 1450,
-   "id": "73e05d55",
+   "id": "3d09b476",
    "metadata": {},
    "outputs": [
     {
@@ -2130,7 +2132,7 @@
   {
    "cell_type": "code",
    "execution_count": 1451,
-   "id": "0dcbcb2e",
+   "id": "7ad2cd61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2146,7 +2148,7 @@
   {
    "cell_type": "code",
    "execution_count": 1455,
-   "id": "beced6cc",
+   "id": "063428e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2155,7 +2157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f4ed3c5",
+   "id": "04ed0952",
    "metadata": {},
    "source": [
     "Please click the button to open the web app: [![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://sunlongan-testmovierec2-testmovierec2-9ranf7.streamlit.app/)"
